# crab

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ai_integration_guide.md  assets.txt  feature_map.txt  layout.json
src/: Action.cpp  Canvas.cpp  Tools.cpp  Tools.h  ai_assistant_window.cpp  ai_assistant_window.h  ai_navigator.cpp  ai_navigator.h  gui.cpp  layout_manager.cpp  layout_manager.h  main.cpp  ui_colors.h  ui_config.h  ui_highlighter.cpp  ui_highlighter.h
